kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: production
  labels:
    app: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - image: bstijnb/browser-client
          imagePullPolicy: IfNotPresent
          name: frontend-service
          ports:
            - containerPort: 80
